[tool.poetry]
name = "graph_dau"
version = "0.1.0"
description = ""
authors = ["mnagaa <s.c.x0x0www10@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
torch = "^1.11.0"
PyGSP = "^0.5.1"
scikit-learn = "^1.0.2"
plyfile = "^0.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
matplotlib = "^3.5.1"
jupyterlab = "^3.3.2"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
